<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">yambla</string>

    <!-- Layout related constants -->
    <string name="status_title">Status Update</string>
    <string name="status_hint_edit">Please, enter your 140-character status</string>
    <string name="status_label_button">Update</string>

    <string name="pref_title_category1">Account</string>
    <string name="pref_title_category2">Other</string>

    <string name="pref_title_username">Username</string>
    <string name="pref_summary_username">Please enter your username</string>
    <string name="pref_title_password">Password</string>
    <string name="pref_summary_password">Please enter your password</string>
    <string name="pref_title_apiroot">Server URL</string>
    <string name="pref_summary_apiroot">URL of Root API for your service</string>
    <string name="pref_key_username">username</string>
    <string name="pref_key_password">password</string>
    <string name="pref_key_apiRoot">apiRoot</string>
    <string name="pref_title">Settings</string>
    <string name="pref_key_provider">provider</string>
    <string name="pref_title_provider">Geo provider</string>
    <string name="pref_summary_provider">Provider to be used for location tags</string>
    <string-array name="providers">
        <item>None, please</item>
        <item>GPS via satellites</item>
        <item>Mobile network</item>
    </string-array>
    <string-array name="providerValues">
        <item>NONE</item>
        <item>gps</item>
        <item>network</item>
    </string-array>

    <string name="menu_title_service_start">Start Service</string>
    <string name="menu_title_service_stop">Stop Service</string>
    <string name="menu_purge">Purge</string>

    <string name="timeline_title">Timeline</string>

    <!-- messages -->
    <string name="msg_setup_prefs">Please, provide settings for application</string>
    <string name="msg_data_purged">All cached data was purged successfully</string>

    <!-- permissions -->
    <string name="permission_send_timeline_notification_label">Send timeline notification permission</string>
    <string name="permission_send_timeline_notification_desc">Used to let listen only specified broadcasters</string>
    <string name="permission_receive_timeline_notification_label">Receive timeline notification permission</string>
    <string name="permission_receive_timeline_notification_desc">Used to broadcast only to specified listeners</string>
</resources>
